--- a/tasks/server-RedHat.yaml
+++ b/tasks/server-RedHat.yaml
@@ -5,3 +5,7 @@
     - name: Ensure rpcbind is running
       service: name=rpcbind state=started enabled=yes
 
+    - set_fact: NFS_SERVICE="nfs"
+
+    - set_fact: NFS_SERVICE="nfs-server"
+      when: ansible_distribution_major_version == "7"
