--- a/tasks/server.yaml
+++ b/tasks/server.yaml
@@ -1,9 +1,14 @@
 ---
+    - name: export the directories editing the file /etc/exports
+      lineinfile: dest=/etc/exports regexp="^{{ item.path }} " line="{{ item.path }} {{ item.export }}" create=yes
+      with_items: "{{ nfs_exports }}"
+      register: nfs_exports_result
+
     - include: "server-{{ansible_os_family}}.yaml"
 
-    - name: export the directories editing the file /etc/exports
-      lineinfile: dest=/etc/exports regexp="^{{ item.path }} " line="{{ item.path }} {{ item.export }}"
-      with_items: "{{ nfs_exports }}"
+    - name: Restart NFS server service
+      service: name={{NFS_SERVICE}} state=restarted
+      when: nfs_exports_result|changed
 
-    - name: export exports file
-      command: exportfs -ra
+    - name: Check if NFS server service is started
+      service: name={{NFS_SERVICE}} state=started
