--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,7 @@ nfs_exports:
   - path: "/home"
     export: "vnode*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"
 
-# Line to add to the /etc/exports file
+# Line to add to the /etc/fstab file
 nfs_client_imports:
   - local: "/home"
     remote: "/home"
