--- a/tests/test_front.yml
+++ b/tests/test_front.yml
@@ -1,4 +1,4 @@
 ---
 - hosts: all
   roles:
-    - {role: role_under_test, nfs_mode: 'front', nfs_exports: [{path: "/home", export: "wn*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}] }
+    - {role: role_under_test, nfs_mode: 'server', nfs_exports: [{path: "/home", export: "wn*(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}] }
