--- a/tasks/server.yaml
+++ b/tasks/server.yaml
@@ -10,7 +10,7 @@
       service: name=rpcbind state=started enabled=yes
 
     - name: Restart NFS server service
-      service: name={{NFS_SERVICE}} state=restarted
+      service: name={{NFS_SERVICE}} state=restarted enabled=yes
       when: nfs_exports_result|changed
 
     - name: Check if NFS server service is started
